--- a/.gitignore
+++ b/.gitignore
@@ -375,3 +375,9 @@ local.properties
 
 # Directory Build overrides for local setups
 Directory.Build.Override.props
+*.vcxproj
+*.db
+*.ipch
+*.qrc
+*.filters
+*.ipch
