--- a/POS - SCW/C#/UnglaublicherRestaurantFinder/UnglaublicherRestaurantFinder/UnglaublicherRestaurantFinder.csproj
+++ b/POS - SCW/C#/UnglaublicherRestaurantFinder/UnglaublicherRestaurantFinder/UnglaublicherRestaurantFinder.csproj
@@ -8,6 +8,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Stadtplan-Wiener-Neustadt.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Stadtplan-Wiener-Neustadt.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="linq2db" Version="5.1.1" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.5" />
   </ItemGroup>
